# newcoder

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_EN.md  config.yaml  pyproject.toml
src/mianjing/: __init__.py  config.py
src/mianjing/application/: __init__.py  compile_service.py  formatter.py  input.py  setup.py
src/mianjing/domain/: __init__.py  models.py
src/mianjing/infrastructure/: __init__.py  browser_fetcher.py  llm_gateway.py  llm_parser.py  md_writer.py  url_fetcher.py
src/mianjing/interfaces/: __init__.py
src/mianjing/interfaces/cli/: main.py
tests/: conftest.py  test_config.py
tests/application/: test_compile_service.py  test_formatter.py  test_input.py  test_setup.py
tests/domain/: test_models.py
tests/infrastructure/: test_llm_gateway.py  test_llm_parser.py  test_md_writer.py  test_url_fetcher.py
tests/interfaces/: test_cli.py
